# LearnProject

./: .gitignore  .gitmodules  README.md  a.out  main.c  test.c
Bash/: mount.sh  rsync.py  rsync.sh  shell.md  sshremote.sh  sync.py
CMakeProject/src/: sub.c
CMakeTest/: CMakeLists.txt  main.c
CMakeTest/inc/: main.h
CmakeProject/: CMakeLists.txt
CmakeProject/log/: CMakeLists.txt
GolangProject/ch1/: go.mod  main.go
GolangProject/ch2/: go.mod  main.go
LinuxProject/Compile/: main  main.c  makefile
LinuxProject/Driver/: Makefile  hello.c  led_dev.c
LinuxProject/Driver/device_tree/: h618-rgb-led.dts
LinuxProject/GPIO/customdriver/: main.c
LinuxProject/Note/: ArmLinux.md  NFS.md  SSH.md
LinuxProject/SPI/: .gitignore  Sconstruct  main.c  makefile
LinuxProject/UART/: main  main.c
MakeProject/: Makefile.build
MakeProject/src/: Makefile
MakefileTest/: Makefile  README.md  main.c
MakefileTest/Note/: cmake.markdown  make.markdown
MakefileTest/inc/: sub.h
MyProject/: CMakeLists.txt  README.md
MyProject/main/: CMakeLists.txt  main.c
Note/: ArmLinux.md  cmake.markdown  cmake.md  freertos.md  gdb.md  git.md  hexo.md  linux.md  make.markdown  make.md  neovim.md  tmux.md  vim.md
Project/: README.md  xmake.lua
Project/log/: xmake.lua
Project/main/: main.c  xmake.lua
RustProject/: Cargo.toml
RustProject/.cargo/: config.toml
RustProject/src/: main.rs
Shell/: mount.sh  rsync.sh  sshremote.sh  test.sh
Test/: Makefile  main  main.c
Tool/: makefile
XmakeProject/: xmake.lua
XmakeProject/main/: main.c
rust_project/src/: main.rs
(+11 files in other folders)
